--- a/main.html
+++ b/main.html
@@ -130,8 +130,8 @@
             <div class="card-body d-flex flex-column">
               <h5 class="card-title text-success">My Portfolio</h5>
               <p class="card-text flex-grow-1">I am building a modern and responsive portfolio website using HTML, CSS, JavaScript, and Bootstrap. This portfolio showcases my skills, projects, and experience as a web developer. It features a clean and professional design with easy navigation, interactive elements, and a contact form for visitors to get in touch. The site is fully responsive, ensuring it looks great on all devices from desktops to smartphones. This project demonstrates my ability to create visually appealing, user-friendly, and functional websites using contemporary web development technologies.</p>
-              <a href="https://github.com/Puja0821/Github.git" target="_blank" rel="noopener" class="btn btn-outline-success mt-auto">GitHub Repo</a>
-              <a href=" https://tauat.spandanasphoorty.com/" target="_blank" rel="noopener" class="btn btn-success">Live Demo</a>
+              <a href="https://github.com/Puja0821/PORTFOLIO.git" target="_blank" rel="noopener" class="btn btn-outline-success mt-auto">GitHub Repo</a>
+              <a href=" " target="_blank" rel="noopener" class="btn btn-success">Live Demo</a>
              
             </div>
           </div>
@@ -146,7 +146,7 @@ For handling employee information and other data, I have integrated a MySQL data
 
 This project demonstrates full-stack development skills by combining modern frontend development with React, robust backend API development with Node.js, and reliable relational data management through MySQL.</p>
               <a href="https://github.com/rajeshgajula/ecommerce-site" target="_blank" rel="noopener" class="btn btn-outline-success mt-auto">GitHub Repo</a>
-               <a href="  https://bistatechnologies.com/" target="_blank" rel="noopener" class="btn btn-success">Live Demo</a>
+               <a href="  " target="_blank" rel="noopener" class="btn btn-success">Live Demo</a>
             
             </div>
           </div>
@@ -211,7 +211,7 @@ This project demonstrates full-stack development skills by combining modern fron
   <script>
     // Initialize Typed.js for hero typed text
     const typed = new Typed('#typed-text', {
-      strings: ['React Developer', 'Node.js Expert', 'Full Stack Engineer', 'API Specialist'],
+      strings: ['React Developer', 'Backend Developer', 'Full Stack Developer', 'Fast Learner','Database Management'],
       typeSpeed: 90,
       backSpeed: 50,
       backDelay: 2000,
