Add modified file

--- a/main.html
+++ b/main.html
@@ -38,7 +38,9 @@
       <div class="text-center text-md-start flex-grow-1">
         <h1 class="display-4 fw-bold mb-3">Hi, I'm Puja Kumari <br><span id="typed-text" class="text-success"></span></h1>
         <p class="lead mb-4">Full Stack Developer passionate about crafting scalable web applications and seamless user experiences.</p>
-        <a href="#projects" class="btn btn-success btn-lg">See My Work</a>
+        <!-- <a href="#projects" class="btn btn-success btn-lg">See My Work</a>
+        <br/> -->
+        <a href="Resume Puja Kumari.pdf" class="btn btn-success btn-lg" download>Download Resume</a>
       </div>
       <div>
         <img src="hi.gif" alt="Puja K" class="rounded-circle border border-success" width="300" height="200" />
