--- a/main.html
+++ b/main.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-  <nav id="navbar" class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top shadow-sm">
+  <nav id="navbar" class="navbar navbar-expand-lg navbar-dark bg-success fixed-top shadow-sm">
     <div class="container">
       <a class="navbar-brand" href="#">Puja K</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -200,7 +200,7 @@ This project demonstrates full-stack development skills by combining modern fron
     </section>
   </main>
 
-  <footer class="bg-dark text-light text-center py-3">
+  <footer class="bg-success text-light text-center py-3">
     &copy; 2024 Puja Kumari. All rights reserved.
   </footer>
 
